[package]
name = "driven-drive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven RemoteStore trait + Google Drive impl + InMemoryRemoteStore fake"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
uuid.workspace = true
# Direct deps (not yet in workspace.dependencies). parking_lot for an
# await-free Mutex over the fake's in-memory state; md-5 for the
# `RemoteEntry.md5` field the fake faithfully computes (and the
# `with_md5_mismatch_after` fault injector tampers with).
parking_lot = "0.12"
md-5 = "0.10"

[dev-dependencies]
# Workspace tokio already enables the "full" feature set (macros +
# rt-multi-thread); re-state the dep so dev-only tests link cleanly
# even if a future refactor narrows the runtime-deps feature list.
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
