[package]
name = "driven-drive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven RemoteStore trait + Google Drive impl + InMemoryRemoteStore fake"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
uuid.workspace = true
# M4 Google Drive client surface (the `google` module):
# - oauth2 for the SPEC s4 PKCE loopback flow.
# - keyring for the SPEC s4.1 refresh-token storage.
# - reqwest for the Drive REST + resumable-upload traffic.
# - url for building the Drive endpoints + the loopback redirect URI.
# - hex for app_property / hash hex encoding.
# - serde_json for the Drive JSON request/response shapes.
oauth2.workspace = true
keyring.workspace = true
reqwest.workspace = true
url.workspace = true
hex.workspace = true
# Direct deps (not yet in workspace.dependencies). parking_lot for an
# await-free Mutex over the fake's in-memory state; md-5 for the
# `RemoteEntry.md5` field the fake faithfully computes (and the
# `with_md5_mismatch_after` fault injector tampers with), and for the M4
# Google store's md5-verify-on-upload (SPEC s8).
parking_lot = "0.12"
md-5 = "0.11"

[dev-dependencies]
# The retry-backoff unit tests use `#[tokio::test(start_paused = true)]` to
# fast-forward the exponential backoff sleeps, which requires tokio's
# `test-util` feature. Enable it explicitly here so `cargo test -p
# driven-drive` is self-contained and does not silently rely on workspace
# feature unification (another crate happening to turn `test-util` on).
tokio = { workspace = true, features = ["test-util"] }
futures.workspace = true
bytes.workspace = true
# The md5_mismatch contract test recomputes the real md5 of its payload
# to verify the fault injector returns a different value (and that
# re-uploading clears the latch).
md-5 = "0.11"
# M4 token_store unit tests bind keyring to an in-memory mock store so they
# do not touch a real OS keychain in CI (the implementer wires the mock via
# keyring 4.x's test store API).
keyring.workspace = true
