[package]
name = "driven-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven production network-probe Backend (reqwest + tokio lookup_host) for the NetworkProbe topology"
publish = false

[dependencies]
# The Backend / NetworkProbe / ProbeOutcome / ServiceName seam this crate
# implements lives in driven-core::network (CODEX_NOTES P2-9: this is the
# production "implementer crate" behind that seam).
driven-core = { path = "../driven-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
# The three-probe topology (DESIGN s5.8.2): an HTTP client for the
# captive-portal / per-service probes + Drive traffic. The DNS re-resolution
# probe (DESIGN s5.8.1) uses `tokio::net::lookup_host` (already in `tokio`),
# not a dedicated resolver crate; `hickory-resolver` is only the optional
# s5.8.5 escalation and is not wired in V1.
reqwest.workspace = true

# Native per-OS reachability backends for the DESIGN s5.8.2 probe-1 read
# (reachability.rs), tried before the generic anycast-DNS TCP probe. Features
# are kept minimal (only the Win32 / D-Bus / Network.framework surface the reads
# call) to keep `cargo build --workspace` light, mirroring driven-power.
[target.'cfg(windows)'.dependencies]
# INetworkListManager::GetConnectivity, instantiated via CoCreateInstance after
# CoInitializeEx (Win32_System_Com), classified in reachability.rs. Win32_Foundation
# pulls the shared handle/HRESULT types the COM signatures use.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Networking_NetworkListManager",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# NetworkManager's aggregate `Connectivity` property on org.freedesktop.NetworkManager
# over the system bus, read via zbus's BLOCKING API dispatched through
# tokio::spawn_blocking (reachability.rs). Same crate + `tokio` feature as
# driven-power so the workspace resolves ONE zbus version; the default features
# (`async-io` + `blocking-api`) are kept because the blocking read needs
# `blocking-api`.
zbus = { version = "5", features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
# NWPathMonitor whose update handler (an Objective-C block) caches
# nw_path_get_status (reachability.rs). block2 supplies the block type; the
# Network.framework and libdispatch C functions are declared via `extern "C"`
# and linked with `#[link(name = "Network", kind = "framework")]`, so no
# core-foundation / objc2 crates are needed for this read.
block2 = "0.6"

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` so the DNS-no-hang
# acceptance test drives `tokio::time::timeout` on virtual time (no wall-clock
# wait) - see resolve_within_bounds_a_blackholed_lookup. `test-util` is NOT in
# tokio's `full` feature, so it must be enabled explicitly here; no new crate
# is pulled in (it is an internal tokio feature).
tokio = { workspace = true, features = ["test-util"] }
