[package]
name = "driven-power"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven power-source / metered-network / sleep-wake signals, normalized across OSes"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true

# Per-OS power / metered-network / sleep-wake backends (DESIGN s5.7,
# s5.10.1). Declared now so the M3 implement phase has them; features are
# kept minimal here (the impl widens them to the specific Win32 / DBus
# modules it calls) to keep `cargo build --workspace` light.
[target.'cfg(windows)'.dependencies]
# GetSystemPowerStatus (Win32_System_Power) for AC/battery (DESIGN s5.7).
# Win32_Foundation pulls the shared BOOL/handle types its signature uses.
# INetworkCostManager (metered) and the WM_POWERBROADCAST message pump
# (sleep/wake) are TODO seams in network.rs / windows.rs; their feature
# flags widen this list when those hooks are wired (DESIGN s5.7, s5.10.1).
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Power",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# Battery/AC is read from /sys/class/power_supply with std only. The
# systemd-logind PrepareForSleep DBus signal + NetworkManager Metered /
# Connectivity are TODO seams (linux.rs / network.rs); zbus is declared now
# for when those DBus hooks land (DESIGN s5.7, s5.10.1).
zbus = "5"

[target.'cfg(target_os = "macos")'.dependencies]
# IOKit IOPowerSources for AC/battery, read via CoreFoundation types
# (DESIGN s5.7). NSWorkspace sleep/wake bridging via objc2 is a TODO seam
# in macos.rs; objc2 is declared now for when that hook lands (s5.10.1).
core-foundation = "0.10"
objc2 = "0.6"
