[package]
name = "driven-test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Driven shared test helpers: tree!() macro, FakeClock, FakePowerSource, assertion helpers"
publish = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
